@@ -3,15 +3,14 @@ package com.dedicatedcode.reitti.repository;
 import com.dedicatedcode.reitti.model.geo.ProcessedVisit;
 import com.dedicatedcode.reitti.model.geo.SignificantPlace;
 import com.dedicatedcode.reitti.model.security.User;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.ObjectCodec;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.jdbc.core.ArgumentPreparedStatementSetter;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import tools.jackson.core.JacksonException;
+import tools.jackson.core.type.TypeReference;
+import tools.jackson.databind.ObjectMapper;
 
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -19,6 +18,7 @@ import java.sql.Timestamp;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -51,7 +51,7 @@ public class ProcessedVisitJdbcService {
                         metadata,
                         rs.getLong("version")
                 );
-            } catch (JsonProcessingException e) {
+            } catch (JacksonException e) {
                 throw new RuntimeException(e);
             }
 
@@ -153,7 +153,7 @@ public class ProcessedVisitJdbcService {
     private String asJson(Object value) {
         try {
             return this.objectMapper.writeValueAsString(value);
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             throw new RuntimeException(e);
         }
     }
@@ -176,7 +176,17 @@ public class ProcessedVisitJdbcService {
                 "FROM processed_visits pv " +
                 "WHERE pv.id = ?";
         List<ProcessedVisit> results = jdbcTemplate.query(sql, PROCESSED_VISIT_ROW_MAPPER, id);
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
+    }
+
+    public Map<Long, ProcessedVisit> findByIds(List<Long> ids) {
+        if (ids == null || ids.isEmpty()) {
+            return Collections.emptyMap();
+        }
+        String placeholders = String.join(",", ids.stream().map(id -> "?").toList());
+        String sql = "SELECT pv.* FROM processed_visits pv WHERE pv.id IN (" + placeholders + ")";
+        List<ProcessedVisit> list = jdbcTemplate.query(sql, PROCESSED_VISIT_ROW_MAPPER, ids.toArray());
+        return list.stream().collect(Collectors.toMap(ProcessedVisit::getId, v -> v));
     }
 
     public void deleteAll(List<ProcessedVisit> processedVisits) {
